# bigearthnet_gdf_builder

./: .autorc  .buildinfo  .gitignore  05_quickstart.html  10_relation.html  CHANGELOG.md  README.md  api.html  api_builder.html  genindex.html  intro.html  justfile  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  settings.ini
.auto/: update_version.sh
.doctrees/: 05_quickstart.doctree  10_relation.doctree  api.doctree  api_builder.doctree  environment.pickle  intro.doctree
.doctrees/general/: code_of_conduct.doctree  dependencies.doctree  license.doctree
.github/: CONTRIBUTING.md  config.yml
.github/workflows/: skip_test.yml  test.yml
_recs/: 05_quickstart-asciinema-0.rec
_sources/: 05_quickstart.md.txt  10_relation.md.txt  intro.md.txt
bigearthnet_gdf_builder/: __init__.py  _nbdev.py  builder.py
docs/: _config.yml  _toc.yml  api_builder.md  builder.html  conf.py  index.html  intro.md  sidebar.json
docs/_data/: topnav.yml
docs/_data/sidebars/: home_sidebar.yml
general/: code_of_conduct.html  dependencies.html  license.html
nbs/: 00_builder.ipynb  bigearthnet_gdf_builder  index.ipynb
src/bigearthnet_gdf_builder/: builder.py
tests/: __init__.py  test_builder.py
tests/datasets/s1-tiny/S1A_IW_GRDH_1SDV_20170613T165043_33UUP_61_41/: S1A_IW_GRDH_1SDV_20170613T165043_33UUP_61_41_labels_metadata.json
tests/datasets/tiny/S2A_MSIL2A_20180510T94033_19_86/: S2A_MSIL2A_20180510T94033_19_86_labels_metadata.json
tests/datasets/tiny/S2B_MSIL2A_20170914T093029_32_39/: S2B_MSIL2A_20170914T093029_32_39_labels_metadata.json
tests/datasets/tiny/S2B_MSIL2A_20170924T093019_43_47/: S2B_MSIL2A_20170924T093019_43_47_labels_metadata.json
tests/datasets/tiny/S2B_MSIL2A_20170924T93021_41_29/: S2B_MSIL2A_20170924T93021_41_29_labels_metadata.json
tests/datasets/tiny/S2B_MSIL2A_20170927T094019_66_56/: S2B_MSIL2A_20170927T094019_66_56_labels_metadata.json
tests/datasets/tiny/S2B_MSIL2A_20180421T114349_41_4/: S2B_MSIL2A_20180421T114349_41_4_labels_metadata.json
tests/datasets/tiny/S2B_MSIL2A_20180421T114349_47_56/: S2B_MSIL2A_20180421T114349_47_56_labels_metadata.json
tests/datasets/tiny/S2B_MSIL2A_20180502T093039_43_14/: S2B_MSIL2A_20180502T093039_43_14_labels_metadata.json
