[tool.poetry]
name = "bigearthnet_gdf_builder"
version = "0.1.7"
description = "A package to generate and extend BigEarthNet GeoDataFrames."
authors = ["Kai Norman Clasen <k.clasen@protonmail.com>"]
license = "Apache Software License 2.0"
readme = "README.md"
homepage = "https://github.com/kai-tub/bigearthnet_gdf_builder/"
repository = "https://github.com/kai-tub/bigearthnet_gdf_builder/"

documentation = "https://github.com/kai-tub.github.io/bigearthnet_gdf_builder"

include = [
    "LICENSE",
]
keywords = ["geopandas", "ben", "bigearthnet", "script", "parquet"]

[tool.poetry.dependencies]
# TODO: Find a better way to set these values!
python = "^3.8"
geopandas = "^0.10"
# Only limit if rich actually requires changes
rich = ">=10"
pydantic = "^1.8"
fastcore = "^1.3"
natsort = "^8"
pygeos = "^0.12"
pyarrow = "^6"
appdirs = "^1.4"
# typer is only required for CLI interface, but can
# be listed as true dependency in my opinion
typer = "^0.4"
bigearthnet-common = ">=2.4, <=3.0"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pytest = "*"
Sphinx = "^4.5"
furo = "*"
livereload = "*"
sphinx-external-toc = "*"
pre-commit = "*"
myst-nb = "0.14"
ipykernel = "*"
linkify-it-py = "*"
# Strictly speaking, I do not require these in the library
folium = "*"
matplotlib = "*"
mapclassify = "*"
sphinxcontrib-mermaid = "^0.7.1"
sphinx_design = "^0.1.0"
sphinx-comments = "^0.0.3"

[tool.poetry.scripts]
ben_gdf_builder = "bigearthnet_gdf_builder.builder:_run_gdf_cli"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
